--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col">
                     <img class="humidity" src="images/humidity2.png">
                     <div>
-                        <p class="humidity">50%</p>
+                        <p class="humiditynumber">50%</p>
                         <p>Humadity</p>
                     </div>
                 </div>
@@ -36,8 +36,25 @@
         </div>
     </div>
 
+    <!-- <div class="card">
+        <div class="search">
+            <input type="text" class="search-bar" placeholder="Enter city name">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="weather">
+            <h2 class="city">New York</h2>
+            <div class="temp">22 °C</div>
+            <div class="description">cloudy</div>
+            <div class="humidity">humidity: 60%</div>
+            <div class="wind">wind speed: 602 <km>
+        </div>
+    </div> -->
 
 
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
